<resources>
    <string name="app_name">Electricity Bill Estimator</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save to History</string>
    <string name="history">View History</string>
    <string name="about">About</string>
    <string name="units_label">Units Used (kWh):</string>
    <string name="rebate_label">Rebate Percentage (%):</string>
    <string name="total_charges_label">Total Charges:</string>
    <string name="final_cost_label">Final Cost:</string>
    <string name="month_label">Select Month:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="instructions_title">How to Use:</string>
    <string name="instructions_text">1. Select the month from the dropdown.\n2. Enter the units consumed (between 1 and 1000 kWh).\n3. Use the slider to select a rebate percentage (0-5%).\n4. Click Calculate to see the estimated bill.\n5. Click Save to keep a record in the history.</string>
    <string name="student_info">Name: Mohamad Adib Adam bin Mohamad Zaidi\nStudent ID: 2025147673\nCourse: ICT602 - Mobile Technology And Development\nGroup: CDCS2515A</string>
    <string name="github_url">https://github.com/griyu/ICT602_IndividualAssignment</string>
    <string name="copyright">© 2026 Electricity Bill Estimator. All Rights Reserved.</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
